--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 ---
 
-<div class="w-full bg-center bg-cover h-screen flex flex-col" style="background-image: url(/assets/images/humle.jpg);">
+<div class="w-full bg-center bg-cover min-h-screen flex flex-col" style="background-image: url(/assets/images/humle.jpg);">
 
   <nav class="bg-gray-900 bg-opacity-50">
     <div class="container px-6 py-4 mx-auto lg:flex md:justify-between justify-center lg:items-center">
@@ -18,7 +18,7 @@ layout: home
     </div>
   </nav>
 
-  <div class="flex flex-col items-center justify-center w-full h-full bg-gray-900 bg-opacity-50 space-y-4">
+  <div class="flex flex-col items-center justify-center w-full h-screen bg-gray-900 bg-opacity-50 space-y-4 pb-4">
 
     <div>
       <h1 class="text-lg md:text-2xl uppercase font-bold text-white">Ditt lokala bryggeri i gagnef</h1>
