Add permalinks, no more.html

--- a/brewery.html
+++ b/brewery.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Bryggeriet
+permalink: /brewery/
 ---
 
 <div class="bg-white">
@@ -17,7 +18,7 @@ title: Bryggeriet
           </svg>
       </span>
 
-      <a href="/beers" class="text-emerald-600 hover:underline">
+      <a href="/brewery" class="text-emerald-600 hover:underline">
           Bryggeriet
       </a>
   </div>
@@ -40,7 +41,7 @@ title: Bryggeriet
   </p>
   
 </div>
-  <img src="assets/images/anders-och-lasse.jpeg" class="md:h-64 md:w-auto sm:w-full"/>
+  <img src="/assets/images/anders-och-lasse.jpeg" class="md:h-64 md:w-auto sm:w-full"/>
   <p>
     2021 registrerades Gagnef Brewing AB. En lokal säkrades.
   </p>
