--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: home
 
       {% include simple-card.html
         title="Bryggeriet"
-        href="/bryggeriet"
+        href="/brewery"
         img_src="/assets/images/olfat.jpeg"
       %}
     </div>
