--- a/_beers/vintarti-mild-ale.html
+++ b/_beers/vintarti-mild-ale.html
@@ -9,6 +9,7 @@ size: 33cl
 container: Flaska
 image: /assets/images/beers/vintarti-mild-ale.jpeg
 description: "En mild ale till julbordet"
+permalink: /beers/vintarti-mild-ale
 ---
 
 <div class="space-y-2">
