--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ layout: home
     
     <div class="flex flex-wrap flex-col space-y-4 md:space-y-0 md:flex-row md:space-x-4 items-center justify-center ">
       {% include simple-card.html
-        title="Våra öl"
-        href="/beers"
+        title="Produkter"
+        href="/products"
         img_src="/assets/images/beers/vintarti-mild-ale.jpeg"
       %}
 
