--- a/products.html
+++ b/products.html
@@ -1,6 +1,8 @@
 ---
 layout: default
-title: Våra Öl
+title: Produkter
+permalink: /products/beers
+permalink: /products
 ---
 
 <div>
@@ -19,7 +21,7 @@ title: Våra Öl
         </span>
   
         <a href="/beers" class="text-emerald-600 hover:underline">
-            Våra öl
+            Produkter
         </a>
     </div>
   </div>
