--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: home
   <div class="flex flex-col items-center justify-center w-full h-screen bg-gray-900 bg-opacity-50 space-y-4 pb-4">
 
     <div>
-      <h1 class="text-lg md:text-2xl uppercase font-bold text-white">Ditt lokala bryggeri i gagnef</h1>
+      <h1 class="text-lg md:text-2xl uppercase font-bold text-white">Ditt lokala bryggeri</h1>
     </div>
     
     <div class="flex flex-wrap flex-col space-y-4 md:space-y-0 md:flex-row md:space-x-4 items-center justify-center ">
