--- a/brewery.html
+++ b/brewery.html
@@ -18,7 +18,7 @@ permalink: /brewery/
           </svg>
       </span>
 
-      <a href="/brewery" class="text-emerald-600 hover:underline">
+      <a href="/brewery" class="text-teal-600 hover:underline">
           Bryggeriet
       </a>
   </div>
