--- a/products.html
+++ b/products.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 title: Produkter
-permalink: /products/beers
 permalink: /products
 ---
 
@@ -20,7 +19,7 @@ permalink: /products
             </svg>
         </span>
   
-        <a href="/beers" class="text-emerald-600 hover:underline">
+        <a href="/beers" class="text-teal-600 hover:underline">
             Produkter
         </a>
     </div>
