--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 ---
 
-<div class="w-full bg-center bg-cover min-h-screen flex flex-col" style="background-image: url(/assets/images/humle.jpg);">
+<div class="w-full bg-center bg-cover min-h-screen flex flex-col" style="background-image: url(/assets/images/home-bg.jpg);">
 
   <nav class="bg-gray-900 bg-opacity-50">
     <div class="container px-6 py-4 mx-auto lg:flex md:justify-between justify-center lg:items-center">
@@ -21,7 +21,7 @@ layout: home
   <div class="flex flex-col items-center justify-center w-full h-screen bg-gray-900 bg-opacity-50 space-y-4 pb-4">
 
     <div>
-      <h1 class="text-lg md:text-2xl uppercase font-bold text-white">Ditt lokala bryggeri</h1>
+      <h1 class="text-lg md:text-2xl uppercase font-bold text-teal-100">Ditt lokala bryggeri</h1>
     </div>
     
     <div class="flex flex-wrap flex-col space-y-4 md:space-y-0 md:flex-row md:space-x-4 items-center justify-center ">
