--- a/404.html
+++ b/404.html
@@ -3,9 +3,9 @@ permalink: /404.html
 layout: default
 ---
 
-<div>
-  <h1>404</h1>
+<div class="flex flex-col items-center align-center p-8">
+  <h1 class="text-2xl">404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Vi verkar ha tappat ölen :(</strong></p>
+  <p>Sidan kunden inte hittas.</p>
 </div>
