--- a/_beers/vintarti-mild-ale.html
+++ b/_beers/vintarti-mild-ale.html
@@ -12,7 +12,7 @@ description: "En mild ale till julbordet"
 permalink: /products/vintarti-mild-ale
 ---
 
-<div class="space-y-2">
+<div class="space-y-2 px-6">
   <p>
     Vår tolkning av en engelsk mild ale, perfekt till julbordet.
   </p>
