--- a/brewery.html
+++ b/brewery.html
@@ -25,24 +25,30 @@ permalink: /brewery/
 </div>
 
 <div class="space-y-4">
-  <img src="/assets/images/olfat.jpeg" class="md:h-64 md:w-auto sm:w-full" />
-  <div class="space-y-2 px-2">
-  <p>
-    Allt började med att Isak började brygga öl i sin farfars källare. Med åren blev recepten bättre, godare.
-  </p>
-  <p>
-    Detta tände en idé hos ölnördarna Lasse, Anders och Jörgen att göra något kul för Gagnef - starta ett lokalt bryggeri.
-  </p>
-  <p>
-    Vägen till ett nytt bryggeri var lång och snårig. 
-  </p>
-  <p>
-    Med hjälp av våra vänner på Wetterstadens Bryggeri kunde Isaks recept bryggas på lite större skala och under vinter 2021 kom en folköl, Vintärti Mild Ale, ut på hyllorna på ICA Nära Gagnefhallen och ICA Nära Dala-Floda.
-  </p>
-  
-</div>
-  <img src="/assets/images/anders-och-lasse.jpeg" class="md:h-64 md:w-auto sm:w-full"/>
-  <p>
-    2021 registrerades Gagnef Brewing AB. En lokal säkrades.
-  </p>
+  <div class="md:flex md:items-center">
+    <img src="/assets/images/isak.jpeg" class="md:h-64 md:w-auto sm:w-full" />
+    <div class="space-y-2 p-2 max-w-md">
+      <p>
+        Allt började med att Isak började brygga öl i sin farfars källare. Med åren blev recepten bättre, godare.
+      </p>
+      <p>
+        Detta tände en idé hos ölnördarna Lasse, Anders och Jörgen att göra något kul för Gagnef - starta ett lokalt bryggeri.
+      </p>
+    </div>
+  </div>
+
+  <div class="md:flex md:items-center">
+    <div class="space-y-2 p-2 max-w-md">
+      <p>
+        Med hjälp av våra vänner på Wetterstadens Bryggeri kunde Isaks recept bryggas på lite större skala.
+      </p>
+      <p>Under vintern 2021 kom en folköl, Vintärti Mild Ale, ut på hyllorna på ICA Nära Gagnefhallen och ICA Nära Dala-Floda.
+      </p>
+
+      <p>
+        2021 registrerades Gagnef Brewing AB. En lokal säkrades.
+      </p>
+    </div>
+    <img src="/assets/images/anders-och-lasse.jpeg" class="md:h-64 md:w-auto sm:w-full"/>
+  </div>
 </div>
