--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@ layout: home
 
 <div class="w-full bg-center bg-cover min-h-screen flex flex-col" style="background-image: url(/assets/images/home-bg.jpg);">
 
-  <nav class="bg-gray-900 bg-opacity-50">
+  <nav class="">
     <div class="container px-6 py-4 mx-auto lg:flex md:justify-between justify-center lg:items-center">
         <div class="lg:flex lg:items-center">
             <div class="flex items-center justify-center md:justify-between">
                 <div>
                     <a class="" href="/">
-                      <img src="/assets/images/logo.png" class="h-24 md:m-4 sm:mb-4 transition duration-200 transform invert"/>
+                      <img src="/assets/images/logo.png" class="h-24 m-4 transition duration-200 transform invert"/>
                     </a>
                 </div>
             </div>
@@ -18,7 +18,7 @@ layout: home
     </div>
   </nav>
 
-  <div class="flex flex-col items-center justify-center w-full h-screen bg-gray-900 bg-opacity-50 space-y-4 pb-4">
+  <div class="flex flex-col items-center justify-center w-full h-screen bg-gray-900 bg-opacity-50 space-y-4 pb-4 pt-20 md:pt-0 -mt-40">
 
     <div>
       <h1 class="text-lg md:text-2xl uppercase font-bold text-teal-100">Ditt lokala bryggeri</h1>
