--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 ---
 
 <div class="w-full bg-center bg-cover min-h-screen flex flex-col" style="background-image: url(/assets/images/home-bg.jpg);">
-
+  {% include under-contruction.html %}
   <nav class="bg-gray-900 bg-opacity-50">
     <div class="container px-6 py-4 mx-auto lg:flex md:justify-between justify-center lg:items-center">
         <div class="lg:flex lg:items-center">
