--- a/404.html
+++ b/404.html
@@ -7,5 +7,5 @@ layout: default
   <h1 class="text-2xl">404</h1>
 
   <p><strong>Vi verkar ha tappat ölen :(</strong></p>
-  <p>Sidan kunden inte hittas.</p>
+  <p>Sidan hittades inte.</p>
 </div>
