Fix broken link

--- a/products.html
+++ b/products.html
@@ -19,7 +19,7 @@ permalink: /products
             </svg>
         </span>
   
-        <a href="/beers" class="text-teal-600 hover:underline">
+        <a href="/products" class="text-teal-600 hover:underline">
             Produkter
         </a>
     </div>
