--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ layout: home
     </div>
   </nav>
 
-  <div class="absolute top-0 left-0 flex flex-col items-center justify-center w-full h-screen bg-gray-900 bg-opacity-40 space-y-4 pb-4">
+  <div class="absolute top-0 left-0 flex flex-col items-center justify-center w-full h-screen bg-gray-900 bg-opacity-40 space-y-16 pb-4">
 
     <h1 class="text-5xl sm:text-8xl uppercase font-bold text-teal-100 text-center">Ditt lokala bryggeri</h1>
 
-    <div class="flex flex-wrap flex-col space-y-4 md:space-y-0 md:flex-row md:space-x-4 items-center justify-center ">
+    <div class="flex flex-wrap flex-col space-y-8 sm:space-y-0 sm:flex-row sm:space-x-8 items-center justify-center ">
       <a href="/products">
         {% include big-button.html
           text="Se våra produkter"
