--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ layout: home
 <div class="w-full bg-center bg-cover min-h-screen flex flex-col" style="background-image: url(/assets/images/home-bg.jpg);">
   {% include under-contruction.html %}
   <nav class="z-10">
-    <div class="container px-6 py-4 mx-auto lg:flex md:justify-between justify-center lg:items-center">
+    <div class="px-6 py-4 mx-auto lg:flex sm:justify-between justify-center lg:items-center">
         <div class="lg:flex lg:items-center">
-            <div class="flex items-center justify-center md:justify-between">
+            <div class="flex items-center justify-center sm:justify-between">
                 <div>
                     <a class="" href="/">
                       <img src="/assets/images/logo.png" class="h-24 m-4 transition duration-200 transform invert"/>
@@ -19,11 +19,10 @@ layout: home
   </nav>
 
   <div class="absolute top-0 left-0 flex flex-col items-center justify-center w-full h-screen bg-gray-900 bg-opacity-40 space-y-16 pb-4">
-
     <h1 class="text-5xl sm:text-8xl uppercase font-bold text-white text-center font-title drop-shadow-lg">Ditt lokala bryggeri</h1>
 
-    <div class="flex flex-wrap flex-col space-y-8 sm:space-y-0 sm:flex-row sm:space-x-8 items-center justify-center ">
-      <a href="/products">
+    <div class="flex flex-col space-y-8 sm:flex-row sm:space-x-8 sm:space-y-0 items-center justify-center">
+      <a href="/products" class="w-full sm:w-auto">
         {% include big-button.html
           text="Se våra produkter"
         %}
