Bundled bump in quality

--- a/brewery.html
+++ b/brewery.html
@@ -4,51 +4,25 @@ title: Bryggeriet
 permalink: /brewery/
 ---
 
-<div class="bg-white">
-  <div class="container flex items-center px-6 py-4 mx-auto overflow-y-auto whitespace-nowrap">
-      <a href="/" class="text-gray-600">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 20 20" fill="currentColor">
-              <path d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" />
-          </svg>
-      </a>
-
-      <span class="mx-5 text-gray-500">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 20 20" fill="currentColor">
-              <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
-          </svg>
-      </span>
-
-      <a href="/brewery" class="text-teal-600 hover:underline">
-          Bryggeriet
-      </a>
-  </div>
-</div>
-
-<div class="space-y-4">
-  <div class="md:flex md:items-center">
-    <img src="/assets/images/isak.jpeg" class="md:h-64 md:w-auto sm:w-full" />
-    <div class="space-y-2 p-2 max-w-md">
-      <p>
-        Allt började med att Isak började brygga öl i sin farfars källare. Med åren blev recepten bättre, godare.
-      </p>
-      <p>
-        Detta tände en idé hos ölnördarna Lasse, Anders och Jörgen att göra något kul för Gagnef - starta ett lokalt bryggeri.
-      </p>
-    </div>
+<div class="container p-4 space-y-4 max-w-2xl">
+  <img src="/assets/images/isak.jpeg" />
+  <div class="space-y-2">
+    <h1 class="text-lg sm:text-4xl uppercase font-bold text-gray-900 font-title drop-shadow-sm">Bryggeriet</h1>
+    <p>
+      Allt började med att Isak började brygga öl i sin farfars källare. Med åren blev recepten bättre, godare.
+    </p>
+    <p>
+      Detta tände en idé hos ölnördarna Lasse, Anders och Jörgen att göra något kul för Gagnef - starta ett lokalt bryggeri.
+    </p>
   </div>
 
-  <div class="md:flex md:items-center">
-    <div class="space-y-2 p-2 max-w-md">
-      <p>
-        Med hjälp av våra vänner på Wetterstadens Bryggeri kunde Isaks recept bryggas på lite större skala.
-      </p>
-      <p>Under vintern 2021 kom en folköl, Vintärti Mild Ale, ut på hyllorna på ICA Nära Gagnefhallen och ICA Nära Dala-Floda.
-      </p>
+  <div class="space-y-2">
+    <p>Under hösten 2021 registrerades Gagnef Brewing AB.</p>
 
-      <p>
-        2021 registrerades Gagnef Brewing AB. En lokal säkrades.
-      </p>
-    </div>
-    <img src="/assets/images/anders-och-lasse.jpeg" class="md:h-64 md:w-auto sm:w-full"/>
+    <p>
+      Med hjälp av våra vänner på Wetterstadens Bryggeri kom vår gemensamma folköl, Vintärti Mild Ale, med recept från Isak, ut på hyllorna på ICA Nära Gagnefhallen och ICA Nära Dala-Floda.
+    </p>
+
   </div>
+  <img src="/assets/images/anders-och-lasse.jpeg" />
 </div>
