--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ layout: home
 <div class="w-full bg-center bg-cover min-h-screen flex flex-col" style="background-image: url(/assets/images/home-bg.jpg);">
   {% include under-contruction.html %}
   <nav class="z-10">
-    <div class="px-6 py-4 mx-auto lg:flex sm:justify-between justify-center lg:items-center">
+    <div class="container px-6 py-4 mx-auto lg:flex sm:justify-between justify-center lg:items-center">
         <div class="lg:flex lg:items-center">
             <div class="flex items-center justify-center sm:justify-between">
                 <div>
                     <a class="" href="/">
-                      <img src="/assets/images/logo.png" class="h-24 m-4 transition duration-200 transform invert"/>
+                      <img src="/assets/images/logo.png" class="h-24 my-4 transition duration-200 transform invert hover:scale-[1.1]"/>
                     </a>
                 </div>
             </div>
