Another bundle. Sorry.

--- a/products.html
+++ b/products.html
@@ -4,7 +4,6 @@ title: Produkter
 permalink: /products
 ---
 
-<div class="container p-4">
-  <h1 class="text-lg sm:text-4xl uppercase font-bold text-gray-900 font-title drop-shadow-sm">Produkter</h1>
+<div class="container p-4 space-y-16">
   {% include beer-list.html %}
 </div>
