--- a/brewery.html
+++ b/brewery.html
@@ -26,3 +26,29 @@ permalink: /brewery/
   </div>
   <img src="/assets/images/anders-och-lasse.jpeg" />
 </div>
+
+<!--
+<div class="w-1/2 flex gap-8 snap-x scroll-pl-6 overflow-x-auto py-14 snap-mandatory">
+  <div class="snap-center shrink-0">
+    <div class="shrink-0 w-4 sm:w-48"></div>
+  </div>
+  <div class="snap-always snap-center shrink-0 first:pl-6 last:pr-6">
+    <img src="https://images.unsplash.com/photo-1604999565976-8913ad2ddb7c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=320&h=160&q=80" />
+  </div>
+  <div class="snap-always snap-center shrink-0 first:pl-6 last:pr-6">
+    <img src="https://images.unsplash.com/photo-1540206351-d6465b3ac5c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=320&h=160&q=80" />
+  </div>
+  <div class="snap-always snap-center shrink-0 first:pl-6 last:pr-6">
+    <img src="https://images.unsplash.com/photo-1622890806166-111d7f6c7c97?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=320&h=160&q=80" />
+  </div>
+  <div class="snap-always snap-center shrink-0 first:pl-6 last:pr-6">
+    <img src="https://images.unsplash.com/photo-1590523277543-a94d2e4eb00b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=320&h=160&q=80" />
+  </div>
+  <div class="snap-always snap-center shrink-0 first:pl-6 last:pr-6">
+    <img src="https://images.unsplash.com/photo-1575424909138-46b05e5919ec?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=320&h=160&q=80" />
+  </div>
+  <div class="snap-center shrink-0">
+    <div class="shrink-0 w-4 sm:w-48"></div>
+  </div>
+</div>
+-->
