Tweak beer layout

--- a/brewery.html
+++ b/brewery.html
@@ -5,9 +5,9 @@ permalink: /brewery/
 ---
 
 <div class="container p-4 space-y-4 max-w-2xl">
-  <img src="/assets/images/isak.jpeg" />
+  <!--<img src="/assets/images/isak.jpeg" />-->
   <div class="space-y-2">
-    <h1 class="text-lg sm:text-4xl uppercase font-bold text-gray-900 font-title drop-shadow-sm">Bryggeriet</h1>
+    <h1 class="text-3xl sm:text-4xl uppercase font-bold text-gray-900 font-title drop-shadow-sm">Bryggeriet</h1>
     <p>
       Allt började med att Isak började brygga öl i sin farfars källare. Med åren blev recepten bättre, godare.
     </p>
@@ -24,7 +24,7 @@ permalink: /brewery/
     </p>
 
   </div>
-  <img src="/assets/images/anders-och-lasse.jpeg" />
+  <!--<img src="/assets/images/anders-och-lasse.jpeg" />-->
 </div>
 
 <!--
