--- a/_beers/vintarti-mild-ale.html
+++ b/_beers/vintarti-mild-ale.html
@@ -3,17 +3,18 @@ layout: beer
 title: "Vintärti Mild Ale"
 name: "Vintärti Mild Ale"
 alcohol: 3.5%
+classification: Folköl
 sale_date: 2022-01-01
 type: Mild Ale
 size: 33cl
 container: Flaska
-image: /assets/images/beers/vintarti-mild-ale.jpeg
+image: /assets/images/beers/olflaska.png
 description: "En mild ale till julbordet"
 permalink: /products/vintarti-mild-ale
 ---
 
 <div class="space-y-2 px-6">
   <p>
-    Vår tolkning av en engelsk mild ale, perfekt till julbordet.
+    Vår tolkning av en engelsk mild ale.
   </p>
 </div>
