--- a/cookies-privacy.html
+++ b/cookies-privacy.html
@@ -1,6 +1,8 @@
 ---
 permalink: /cookies-privacy.html
 layout: default
+title: Cookies & Privacy Policy
+skip_age: true
 ---
 
 <div class="flex flex-col p-8">
