Smaller text update

--- a/brewery.html
+++ b/brewery.html
@@ -9,7 +9,7 @@ permalink: /brewery/
   <div class="space-y-2">
     <h1 class="text-3xl sm:text-4xl uppercase font-bold text-gray-900 font-title drop-shadow-sm">Bryggeriet</h1>
     <p>
-      Allt började med att Isak började brygga öl i sin farfars källare. Med åren blev recepten bättre, godare.
+      Allt började med att vår bryggmästare Isak började brygga öl i sin farfars källare. Med åren blev recepten godare, bättre.
     </p>
     <p>
       Detta tände en idé hos ölnördarna Lasse, Anders och Jörgen att göra något kul för Gagnef - starta ett lokalt bryggeri.
