--- a/products.html
+++ b/products.html
@@ -5,5 +5,5 @@ permalink: /products
 ---
 
 <div class="container p-4 space-y-16">
-  {% include beer-list.html %}
+  {% include molecules/beer-list.html %}
 </div>
