--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: home
     </div>
   </nav>
 
-  <div class="absolute top-0 left-0 flex flex-col items-center justify-center w-full h-screen bg-gray-900 bg-opacity-40 space-y-16 pb-4">
+  <div class="absolute top-0 left-0 flex flex-col items-center justify-center w-full h-screen bg-gray-900 bg-opacity-20 space-y-16 pb-4">
     <h1 class="text-5xl sm:text-8xl uppercase font-bold text-white text-center font-title drop-shadow-lg">Ditt lokala bryggeri</h1>
 
     <div class="flex flex-col space-y-8 sm:flex-row sm:space-x-8 sm:space-y-0 items-center justify-center">
@@ -28,7 +28,7 @@ layout: home
         %}
       </a>
 
-      <a href="/brewery">
+      <a href="/brewery" class="w-full sm:w-auto">
         {% include components/big-button.html
           text="Läs mer om bryggeriet"
         %}
