--- a/_beers/vintarti-mild-ale.html
+++ b/_beers/vintarti-mild-ale.html
@@ -8,7 +8,7 @@ sale_date: 2022-01-01
 type: Mild Ale
 size: 33cl
 container: Flaska
-image: /assets/images/beers/olflaska.png
+image: /assets/images/beers/olflaska
 description: "En mild ale till julbordet"
 permalink: /products/vintarti-mild-ale
 ---
