--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: home
             <div class="flex items-center justify-center sm:justify-between">
                 <div>
                     <a class="" href="/">
-                      <img src="/assets/images/logo.png" class="h-24 my-4 transition duration-200 transform invert hover:scale-[1.1]"/>
+                      <img src="/assets/images/logo.png" alt="gagnef brewing logo" class="h-24 my-4 transition duration-200 transform invert hover:scale-[1.1]"/>
                     </a>
                 </div>
             </div>
