--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 ---
 
-<div class="w-full bg-center bg-cover min-h-screen flex flex-col" style="background-image: url(/assets/images/home-bg.jpg);">
+<div class="w-full bg-center bg-cover min-h-screen flex flex-col" style="background-image: url(/assets/images/home-bg.jpg),url(/assets/images/home-bg-low-res.jpg);">
   {% include molecules/under-contruction.html %}
   <nav class="z-10">
     <div class="container px-6 py-4 mx-auto lg:flex sm:justify-between justify-center lg:items-center">
