No breadcrumbs on 404

--- a/404.html
+++ b/404.html
@@ -1,6 +1,8 @@
 ---
-permalink: /404.html
+permalink: /404
 layout: default
+title: 404
+skip_breadcrumbs: true
 ---
 
 <div class="flex flex-col items-center align-center p-8">
