First stab at og-meta

--- a/_beers/vintarti-mild-ale.html
+++ b/_beers/vintarti-mild-ale.html
@@ -11,6 +11,7 @@ container: Flaska
 image: /assets/images/beers/olflaska
 description: "En mild ale till julbordet"
 permalink: /products/vintarti-mild-ale
+og_image: /assets/images/og/vintarti-mild-ale.jpg
 ---
 
 <div class="space-y-2 px-6">
