--- a/brewery.html
+++ b/brewery.html
@@ -4,7 +4,7 @@ title: Bryggeriet
 permalink: /brewery/
 ---
 
-<div class="container p-4 space-y-4 max-w-2xl py-16">
+<div class="container min-h-screen p-4 space-y-4 max-w-2xl py-16">
   <!--<img src="/assets/images/isak.jpeg" />-->
   <div class="space-y-2">
     <h1 class="text-3xl sm:text-4xl uppercase font-bold text-gray-900 font-title drop-shadow-sm">Bryggeriet</h1>
