Remove ty-scfeen

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ layout: home
   </nav>
 
   <div class="absolute top-0 left-0 flex flex-col items-center justify-center w-full h-screen bg-gray-900 bg-opacity-20 space-y-16 pb-4">
-    <h1 class="text-4xl ty:text-5xl sm:text-8xl uppercase font-bold text-white text-center font-title drop-shadow-lg">
-      Bryggeriet i Gagnef
+    <h1 class="text-5xl sm:text-8xl uppercase font-bold text-white text-center font-title drop-shadow-lg">
+      Vi brygger i Gagnef
     </h1>
 
     <div class="flex flex-col space-y-8 sm:flex-row sm:space-x-8 sm:space-y-0 items-center justify-center">
