Save before stuff goes into flames

--- a/_beers/vanlig.html
+++ b/_beers/vanlig.html
@@ -1,17 +1,20 @@
 ---
 layout: beer
-title: "Vintärti Mild Ale"
-name: "Vintärti Mild Ale"
+title: "VANLIG"
+name: "VANLIG"
 alcohol: 3.5%
 classification: Folköl
 sale_date: 2022-01-01
-type: Mild Ale
+type: Lager
 size: 33cl
-container: Flaska
+container: Burk
 image: /assets/images/beers/olflaska
-description: "En mild ale till julbordet"
+description: "En valig lager?"
 permalink: /products/vintarti-mild-ale
 og_image: /assets/images/og/vintarti-mild-ale.jpg
+
+can_label: /assets/labels/etikett-vanlig.jpeg
+can_rotation_y: 0.4
 ---
 
 <div class="space-y-2 px-6">
