--- a/brewery.html
+++ b/brewery.html
@@ -25,7 +25,17 @@ permalink: /brewery/
 
   </div>
   <!--<img src="/assets/images/anders-och-lasse.jpeg" />-->
-</div>
+
+  <!--<div class="flex flex-col items-center h-full">
+    <div class="rounded-md outline outline-2 p-2">top</div>
+    <div class="bg-black w-1 h-[25px]"></div>
+    <div class="rounded-md outline outline-2 p-2">mid</div>
+    <div class="bg-black w-1 h-[25px]"></div>
+    <div class="rounded-md outline outline-2 p-2">mid</div>
+    <div class="bg-black w-1 h-[25px]"></div>
+    <div class="rounded-md outline outline-2 p-2">end</div>
+  </div>
+</div>-->
 
 <!--
 <div class="w-1/2 flex gap-8 snap-x scroll-pl-6 overflow-x-auto py-14 snap-mandatory">
