Remove use of 3d cans

--- a/_beers/vanlig.html
+++ b/_beers/vanlig.html
@@ -8,9 +8,9 @@ sale_date: 2022-01-01
 type: Lager
 size: 33cl
 container: Burk
-image: /assets/images/beers/olflaska
+image: /assets/images/beers/vanlig
 description: "En valig lager?"
-permalink: /products/vintarti-mild-ale
+permalink: /products/vanlig
 og_image: /assets/images/og/vintarti-mild-ale.jpg
 
 can_label: /assets/labels/etikett-vanlig.jpeg
