--- a/brewery.html
+++ b/brewery.html
@@ -24,6 +24,50 @@ permalink: /brewery/
     </p>
 
   </div>
+
+  <div>
+    <h3 class="text-2xl font-bold mb-4">Vi är Gagnef brewing</h3>
+    <div class="grid grid-cols-2 gap-4 items-center">
+      <div class="flex flex-col items-center">
+        <div class="overflow-hidden rounded-full bg-[#51a446]">
+          <picture>
+            <source srcset="/assets/images/profiles/isak.webp" type="image/webp">
+            <img class="grayscale brightness-125" src="/assets/images/profiles/isak.png">
+          </picture>
+        </div>
+        <h4 class="mt-2 text-xl">Isak</h4>
+      </div>
+      <div class="flex flex-col items-center">
+        <div class="overflow-hidden rounded-full bg-[#0f70b8]">
+          <picture>
+            <source srcset="/assets/images/profiles/lasse.webp" type="image/webp">
+            <img class="grayscale brightness-125" src="/assets/images/profiles/lasse.png">
+          </picture>
+        </div>
+        <h4 class="mt-2 text-xl">Lasse</h4>
+      </div>
+      <div class="flex flex-col items-center">
+        <div class="overflow-hidden rounded-full bg-[#f47f54]">
+          <picture>
+            <source srcset="/assets/images/profiles/anders.webp" type="image/webp">
+            <img class="grayscale brightness-125" src="/assets/images/profiles/anders.png">
+          </picture>
+        </div>
+        <h4 class="mt-2 text-xl">Anders</h4>
+      </div>
+      <div class="flex flex-col items-center">
+        <div class="overflow-hidden rounded-full bg-[#f1c04d]">
+          <picture>
+            <source srcset="/assets/images/profiles/jorgen.webp" type="image/webp">
+            <img class="grayscale brightness-125" src="/assets/images/profiles/jorgen.png">
+          </picture>
+        </div>
+        <h4 class="mt-2 text-xl">Jörgen</h4>
+      </div>
+    </div>
+  </div>
+
+</div>
   <!--<img src="/assets/images/anders-och-lasse.jpeg" />-->
 
   <!--<div class="flex flex-col items-center h-full">
