--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 layout: home
 ---
 
-<div class="bg-fixed w-full bg-center bg-cover min-h-screen flex flex-col" style="background-image: url(/assets/images/home-bg.jpg),url(/assets/images/home-bg-low-res.jpg);">
-  <div class="bg-gray-900 bg-opacity-20">
-  {% include molecules/under-contruction.html %}
-  <nav>
-    <div class="container px-6 py-4 mx-auto lg:flex sm:justify-between justify-center lg:items-center">
+<!--<div class="bg-fixed w-full bg-center bg-cover min-h-screen flex flex-col" style="background-image: url(/assets/images/home-bg.jpg),url(/assets/images/home-bg-low-res.jpg);">-->
+<div class="bg-fixed w-full bg-center bg-cover min-h-screen flex flex-col bg-[url(/assets/images/flowers.png)]">
+  <div class="flex flex-col justify-between min-h-screen">
+    {% include molecules/under-contruction.html %}
+    <nav class="container px-6 py-4 mx-auto lg:flex sm:justify-between justify-center lg:items-center">
         <div class="lg:flex lg:items-center">
             <div class="flex items-center justify-center sm:justify-between">
                 <div>
@@ -16,36 +16,44 @@ layout: home
                 </div>
             </div>
         </div>
+    </nav>
+
+    <div class="flex flex-col justify-center">
+      <h1 class="text-5xl sm:text-8xl uppercase font-bold text-white text-center font-title drop-shadow-md">
+        Vi brygger i Gagnef
+      </h1>
+
+      <div class="flex flex-col p-4 space-y-8 my-6 sm:flex-row sm:space-x-8 sm:space-y-0 items-center justify-center">
+        <a href="/products" class="w-full sm:w-auto">
+          {% include components/big-button.html
+            text="Se våra produkter"
+          %}
+        </a>
+
+        <a href="/brewery" class="w-full sm:w-auto">
+          {% include components/big-button.html
+            text="Läs mer om bryggeriet"
+          %}
+        </a>
+      </div>
     </div>
-  </nav>
+    <div class="bg-[#f094b4] h-[0px]">
 
-  <h1 class="text-5xl sm:text-8xl uppercase font-bold text-white text-center font-title drop-shadow-lg">
-    Vi brygger i Gagnef
-  </h1>
-
-  <div class="flex items-center justify-center w-full mt-6 lg:mt-0">
-    {%
-      include components/3d-can.html
-      rotation_y = 0.4
-      label = "/assets/labels/etikett-vanlig.jpeg"
-      auto_rotate = true
-    %}
+    </div>
   </div>
 
-  <div class="flex flex-col p-4 space-y-8 my-6 sm:flex-row sm:space-x-8 sm:space-y-0 items-center justify-center">
-    <a href="/products" class="w-full sm:w-auto">
-      {% include components/big-button.html
-        text="Se våra produkter"
-        textColor="white"
-        bgColor="gagnef-green"
-      %}
-    </a>
-
-    <a href="/brewery" class="w-full sm:w-auto">
-      {% include components/big-button.html
-        text="Läs mer om bryggeriet"
-      %}
-    </a>
-  </div>
+  <div class="flex flex-col items-center sm:items-start sm:flex-row bg-[#f094b4]">
+    <div class="flex w-1/2 justify-center">
+      <picture>
+        <source srcset="/assets/images/beers/vanlig.webp" type="image/webp">
+        <img class="h-[500px] mt-[-50px]" src="/assets/images/beers/vanlig.png">
+      </picture>
+    </div>
+    <div class="flex flex-col p-2">
+      <div class="text-4xl font-bold text-white">VANLIG</div>
+      <div class="text-white">
+        Vår första öl.
+      </div>
+    </div>
   </div>
 </div>
