--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 layout: home
 ---
 
-<!--<div class="bg-fixed w-full bg-center bg-cover min-h-screen flex flex-col" style="background-image: url(/assets/images/home-bg.jpg),url(/assets/images/home-bg-low-res.jpg);">-->
 <div class="bg-fixed w-full bg-center bg-cover min-h-screen flex flex-col bg-[url(/assets/images/flowers.png)]">
-  <div class="flex flex-col justify-between min-h-screen">
+  <div class="flex flex-col min-h-screen bg-gradient-to-r from-gagnef-yellow-500/70 to-gagnef-moss-500/50">
     {% include molecules/under-contruction.html %}
     <nav class="container px-6 py-4 mx-auto lg:flex sm:justify-between justify-center lg:items-center">
         <div class="lg:flex lg:items-center">
@@ -18,41 +17,43 @@ layout: home
         </div>
     </nav>
 
-    <div class="flex flex-col justify-center">
+    <div class="flex grow flex-col justify-center">
       <h1 class="text-5xl sm:text-8xl uppercase font-bold text-white text-center font-title drop-shadow-md">
         Vi brygger i Gagnef
       </h1>
-
-      <div class="flex flex-col p-4 space-y-8 my-6 sm:flex-row sm:space-x-8 sm:space-y-0 items-center justify-center">
-        <a href="/products" class="w-full sm:w-auto">
-          {% include components/big-button.html
-            text="Se våra produkter"
-          %}
-        </a>
-
-        <a href="/brewery" class="w-full sm:w-auto">
-          {% include components/big-button.html
-            text="Läs mer om bryggeriet"
-          %}
-        </a>
-      </div>
-    </div>
-    <div class="bg-[#f094b4] h-[0px]">
-
     </div>
   </div>
 
-  <div class="flex flex-col items-center sm:items-start sm:flex-row bg-[#f094b4]">
-    <div class="flex w-1/2 justify-center">
+  <div class="min-h-[250px] pt-5 pb-[150px] flex flex-col-reverse items-center sm:items-start sm:flex-row bg-gagnef-blue-500">
+    <div class="flex sm:w-1/2 self-center justify-center">
+      <div class="flex flex-col p-2 sm:text-right">
+        <div class="text-4xl sm:text-6xl font-bold text-white">BRYGGERIET</div>
+        <div class="text-lg sm:text-xl text-white">
+          <p>Mitt i dalarna, bland älvar och flottbroar </p><p>ligger Gagnef brewery i en gammal matbutik</p>
+          <a class="underline hover:bg-gagnef-orange-500" href="/brewery">Läs mer</a>
+        </div>
+      </div>
+    </div>
+    <div class="flex p-2 sm:w-1/2 justify-center">
       <picture>
-        <source srcset="/assets/images/beers/vanlig.webp" type="image/webp">
-        <img class="h-[500px] mt-[-50px]" src="/assets/images/beers/vanlig.png">
+        <source srcset="/assets/images/brewery.webp" type="image/webp">
+        <img class="rounded-xl" src="/assets/images/brewery.jpg">
       </picture>
     </div>
-    <div class="flex flex-col p-2">
-      <div class="text-4xl font-bold text-white">VANLIG</div>
-      <div class="text-white">
-        Vår första öl.
+  </div>
+
+  <div class="pt-5 flex flex-col items-center sm:items-start sm:flex-row bg-gagnef-pink-500">
+    <div class="flex sm:w-1/2 justify-center">
+      <picture>
+        <source srcset="/assets/images/beers/vanlig.webp" type="image/webp">
+        <img class="h-[500px] mt-[-150px]" src="/assets/images/beers/vanlig.png">
+      </picture>
+    </div>
+    <div class="flex flex-col p-2 self-center">
+      <div class="text-4xl sm:text-6xl font-bold text-white">VANLIG</div>
+      <div class="text-lg sm:text-xl text-white">
+        <p>Vår första öl.</p>
+        <a class="underline hover:bg-gagnef-orange-500" href="/products/vanlig">Läs mer</a>
       </div>
     </div>
   </div>
