Fix center center

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: home
         </div>
     </nav>
 
-    <div class="flex grow flex-col justify-center">
+    <div class="flex grow flex-col justify-center mt-[-160px]">
       <h1 class="text-5xl sm:text-8xl uppercase font-bold text-white text-center font-title drop-shadow-md">
         Vi brygger i Gagnef
       </h1>
