--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 ---
 
 <div class="bg-fixed w-full bg-center bg-cover min-h-screen flex flex-col bg-[url(/assets/images/flowers.png)]">
-  <div class="flex flex-col min-h-screen bg-gradient-to-r from-gagnef-yellow-500/70 to-gagnef-moss-500/50">
+  <div class="flex flex-col min-h-screen bg-gradient-to-r from-gagnef-orange-500/60 to-gagnef-moss-500/50">
     {% include molecules/under-contruction.html %}
     <nav class="container px-6 py-4 mx-auto lg:flex sm:justify-between justify-center lg:items-center">
         <div class="lg:flex lg:items-center">
@@ -24,37 +24,51 @@ layout: home
     </div>
   </div>
 
-  <div class="min-h-[250px] pt-5 pb-[150px] flex flex-col-reverse items-center sm:items-start sm:flex-row bg-gagnef-blue-500">
-    <div class="flex sm:w-1/2 self-center justify-center">
-      <div class="flex flex-col p-2 sm:text-right">
+  <div class="transition-all min-h-[250px] flex flex-col-reverse items-start sm:flex-row bg-gagnef-blue-500">
+    <div class="flex sm:w-1/2 sm:self-center sm:justify-center">
+      <div class="flex flex-col w-full sm:w-auto p-4">
         <div class="text-4xl sm:text-6xl font-bold text-white">BRYGGERIET</div>
         <div class="text-lg sm:text-xl text-white">
-          <p>Mitt i dalarna, bland älvar och flottbroar </p><p>ligger Gagnef brewery i en gammal matbutik</p>
+          <p>Mitt i dalarna, bland älvar och flottbroar </p><p>ligger Gagnef Brewing i en gammal matbutik</p>
           <a class="underline hover:bg-gagnef-orange-500" href="/brewery">Läs mer</a>
         </div>
       </div>
     </div>
-    <div class="flex p-2 sm:w-1/2 justify-center">
-      <picture>
-        <source srcset="/assets/images/brewery.webp" type="image/webp">
-        <img class="rounded-xl" src="/assets/images/brewery.jpg">
-      </picture>
+    <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-[url(/assets/images/brewery.jpg)]">
+      <div class="h-[500px]"></div>
     </div>
   </div>
 
-  <div class="pt-5 flex flex-col items-center sm:items-start sm:flex-row bg-gagnef-pink-500">
-    <div class="flex sm:w-1/2 justify-center">
+  <div class="flex flex-col items-start sm:flex-row bg-gagnef-pink-500">
+    <div class="flex p-4 w-full sm:w-1/2 justify-center self-center bg-[url(/assets/images/flowers.png)]">
       <picture>
         <source srcset="/assets/images/beers/vanlig.webp" type="image/webp">
-        <img class="h-[500px] mt-[-150px]" src="/assets/images/beers/vanlig.png">
+        <img class="h-[500px] " src="/assets/images/beers/vanlig.png">
       </picture>
     </div>
-    <div class="flex flex-col p-2 self-center">
-      <div class="text-4xl sm:text-6xl font-bold text-white">VANLIG</div>
-      <div class="text-lg sm:text-xl text-white">
-        <p>Vår första öl.</p>
-        <a class="underline hover:bg-gagnef-orange-500" href="/products/vanlig">Läs mer</a>
-      </div>
+    <div class="flex sm:w-1/2 sm:self-center sm:justify-center">
+      <div class="flex flex-col w-full sm:w-auto p-4">
+        <div class="text-4xl sm:text-6xl font-bold text-white">VANLIG</div>
+        <div class="text-lg sm:text-xl text-white">
+          <p>Vår första öl.</p>
+          <a class="underline hover:bg-gagnef-orange-500" href="/products/vanlig">Läs mer</a>
+        </div>
+        </div>
     </div>
+  </div>
+
+  <div class="flex flex-col items-center sm:flex-row sm:justify-around p-10 bg-white space-y-5 sm:space-y-0">
+    <a href="//instagram.com/gagnefbrewing" target="_blank">
+      <button class="flex items-center p-2 hover:underline rounded-xl">
+        <img class="w-10 h-10 rounded-xl mr-2" src="/assets/images/socials/instagram.svg" alt="follow gagnef brewing on instagram" />
+        <p class="text-lg">Följ oss på Instagram</p>
+      </button>
+    </a>
+    <a href="//untappd.com/GagnefBrewing" target="_blank">
+      <button class="flex items-center p-2 hover:underline rounded-xl">
+        <img class="w-10 h-10 rounded-xl mr-2" src="/assets/images/socials/untappd.svg" alt="visit gagnef brewing on untappd" />
+        <p class="text-lg">Besök oss på Untappd</p>
+      </button>
+    </a>
   </div>
 </div>
