--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 ---
 
-<div class="bg-fixed w-full bg-center bg-cover min-h-screen flex flex-col bg-[url(/assets/images/flowers.png)]">
+<div class="bg-fixed w-full bg-center bg-cover min-h-screen flex flex-col bg-[url('/assets/images/flottbron.jpg')]">
   <div class="flex flex-col min-h-screen bg-gradient-to-r from-gagnef-orange-500/60 to-gagnef-moss-500/50">
     {% include molecules/under-contruction.html %}
     <nav class="container px-6 py-4 mx-auto lg:flex sm:justify-between justify-center lg:items-center">
