--- a/index.html
+++ b/index.html
@@ -5,14 +5,25 @@ layout: home
 <div class="bg-fixed w-full bg-center bg-cover min-h-screen flex flex-col bg-[url('/assets/images/flottbron.jpg')]">
   <div class="flex flex-col min-h-screen bg-gradient-to-r from-gagnef-orange-500/60 to-gagnef-moss-500/50">
     {% include molecules/under-contruction.html %}
-    <nav class="container px-6 py-4 mx-auto lg:flex sm:justify-between justify-center lg:items-center">
-        <div class="lg:flex lg:items-center">
+    <nav class="container p-4 mx-auto lg:flex sm:justify-between justify-center lg:items-center">
+        <div class="sm:flex sm:items-center">
             <div class="flex items-center justify-center sm:justify-between">
                 <div>
                     <a class="" href="/">
                       <img src="/assets/images/logo.png" alt="gagnef brewing logo" class="h-24 my-4 transition duration-200 transform invert hover:scale-[1.1]"/>
                     </a>
                 </div>
+            </div>
+            <div class="flex flex-col text-white capitalize sm:px-16 sm:mx-4 sm:flex-row sm:items-center">
+              {% for page_data in site.data.page_data %}
+                {% for pg in page_data %}
+                  {%
+                    include components/menu-list-item.html
+                    url = pg.url
+                    text = pg.title
+                  %}
+                {% endfor %}
+              {% endfor %}
             </div>
         </div>
     </nav>
@@ -21,6 +32,9 @@ layout: home
       <h1 class="text-5xl sm:text-8xl uppercase font-bold text-white text-center font-title drop-shadow-md">
         Vi brygger i Gagnef
       </h1>
+    </div>
+    <div class="flex justify-center pb-2">
+      <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_klsab29v.json" background="transparent"  speed="1"  style="width: 24px; height: 39px;" loop autoplay></lottie-player>
     </div>
   </div>
 
