--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@ layout: home
         Vi brygger i Gagnef
       </h1>
     </div>
-    <div class="flex justify-center pb-2">
+    <div class="flex justify-center pb-10">
       <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_klsab29v.json" background="transparent"  speed="1"  style="width: 24px; height: 39px;" loop autoplay></lottie-player>
     </div>
   </div>
 
   <div class="transition-all min-h-[250px] flex flex-col-reverse items-start sm:flex-row bg-gagnef-blue-500">
-    <div class="flex sm:w-1/2 sm:self-center sm:justify-center">
-      <div class="flex flex-col w-full sm:w-auto p-4">
+    <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px]">
+      <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[400px]">
         <div class="text-4xl sm:text-6xl font-bold text-white">BRYGGERIET</div>
         <div class="text-lg sm:text-xl text-white">
-          <p>Mitt i dalarna, bland älvar och flottbroar </p><p>ligger Gagnef Brewing i en gammal matbutik</p>
-          <a class="underline hover:bg-gagnef-orange-500" href="/brewery">Läs mer</a>
+          <p>Mitt i dalarna, bland älvar och flottbroar ligger Gagnef Brewing i en gammal matbutik</p>
+          <!--<a class="underline hover:bg-gagnef-orange-500" href="/brewery">Läs mer</a>-->
         </div>
       </div>
     </div>
@@ -53,7 +53,7 @@ layout: home
     </div>
   </div>
 
-  <div class="flex flex-col items-start sm:flex-row bg-gagnef-pink-500">
+  <!--<div class="flex flex-col items-start sm:flex-row bg-gagnef-pink-500">
     <div class="flex p-4 w-full sm:w-1/2 justify-center self-center bg-[url(/assets/images/flowers.png)]">
       <picture>
         <source srcset="/assets/images/beers/vanlig.webp" type="image/webp">
@@ -69,7 +69,7 @@ layout: home
         </div>
         </div>
     </div>
-  </div>
+  </div>-->
 
   <div class="flex flex-col items-center sm:flex-row sm:justify-around p-10 bg-white space-y-5 sm:space-y-0">
     <a href="//instagram.com/gagnefbrewing" target="_blank">
