Major commit-bump

--- a/_beers/vanlig.html
+++ b/_beers/vanlig.html
@@ -2,23 +2,16 @@
 layout: beer
 title: "VANLIG"
 name: "VANLIG"
-alcohol: 3.5%
-classification: Folköl
-sale_date: 2022-01-01
-type: Lager
+alcohol: 4.9%
+classification: Starköl
+sale_date: 4
+type: "Tysk ale"
 size: 33cl
 container: Burk
 image: /assets/images/beers/vanlig
-description: "En valig lager?"
-permalink: /products/vanlig
-og_image: /assets/images/og/vintarti-mild-ale.jpg
-
-can_label: /assets/labels/etikett-vanlig.jpeg
-can_rotation_y: 0.4
+description: "Idén till Vanlig kläcktes när prästsonen Mike klagade på att vi inte bryggde något \"ljust och blaskigt\" i vårt hembryggeri. Resultatet blev en ljus ale inspirerad av ölen som bryggs i Köln."
+permalink: /beers/vanlig
+og_image: /assets/images/og/og_vanlig.jpeg
+coming_soon: true
+coming_soon_info: Lanseras under sommaren 2022
 ---
-
-<div class="space-y-2 px-6">
-  <p>
-    Vår tolkning av en engelsk mild ale.
-  </p>
-</div>
