--- a/brewery.html
+++ b/brewery.html
@@ -4,105 +4,90 @@ title: Bryggeriet
 permalink: /brewery/
 ---
 
-<div class="container min-h-screen p-4 space-y-4 max-w-2xl py-16">
-  <!--<img src="/assets/images/isak.jpeg" />-->
-  <div class="space-y-2">
-    <h1 class="text-3xl sm:text-4xl uppercase font-bold text-gray-900 font-title drop-shadow-sm">Bryggeriet</h1>
-    <p>
-      Allt började med att vår bryggmästare Isak började brygga öl i sin farfars källare. Med åren blev recepten godare, bättre.
-    </p>
-    <p>
-      Detta tände en idé hos ölnördarna Lasse, Anders och Jörgen att göra något kul för Gagnef - starta ett lokalt bryggeri.
-    </p>
+<div class="min-h-[250px] flex flex-col-reverse items-start sm:flex-row bg-gagnef-orange-500">
+  <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-[url(/assets/images/gb_fat.jpeg)]">
+    <div class="h-[500px]"></div>
   </div>
-
-  <div class="space-y-2">
-    <p>Under hösten 2021 registrerades Gagnef Brewing AB.</p>
-
-    <p>
-      Med hjälp av våra vänner på Wetterstadens Bryggeri kom vår gemensamma folköl, Vintärti Mild Ale, med recept från Isak, ut på hyllorna på ICA Nära Gagnefhallen och ICA Nära Dala-Floda.
-    </p>
-
-  </div>
-
-  <div>
-    <h3 class="text-2xl font-bold mb-4">Vi är Gagnef brewing</h3>
-    <div class="grid grid-cols-2 gap-4 items-center">
-      <div class="flex flex-col items-center">
-        <div class="overflow-hidden rounded-full bg-[#51a446]">
-          <picture>
-            <source srcset="/assets/images/profiles/isak.webp" type="image/webp">
-            <img class="grayscale brightness-125" src="/assets/images/profiles/isak.png">
-          </picture>
-        </div>
-        <h4 class="mt-2 text-xl">Isak</h4>
+  <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
+    <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
+      <h3 class="text-4xl sm:text-6xl font-bold text-black uppercase">Bryggeriet</h3>
+      <div class="text-lg sm:text-xl text-black">
+        <p>Allt började med att vår bryggmästare Isak började brygga öl i sin farfars källare.</p>
       </div>
-      <div class="flex flex-col items-center">
-        <div class="overflow-hidden rounded-full bg-[#0f70b8]">
-          <picture>
-            <source srcset="/assets/images/profiles/lasse.webp" type="image/webp">
-            <img class="grayscale brightness-125" src="/assets/images/profiles/lasse.png">
-          </picture>
-        </div>
-        <h4 class="mt-2 text-xl">Lasse</h4>
-      </div>
-      <div class="flex flex-col items-center">
-        <div class="overflow-hidden rounded-full bg-[#f47f54]">
-          <picture>
-            <source srcset="/assets/images/profiles/anders.webp" type="image/webp">
-            <img class="grayscale brightness-125" src="/assets/images/profiles/anders.png">
-          </picture>
-        </div>
-        <h4 class="mt-2 text-xl">Anders</h4>
-      </div>
-      <div class="flex flex-col items-center">
-        <div class="overflow-hidden rounded-full bg-[#f1c04d]">
-          <picture>
-            <source srcset="/assets/images/profiles/jorgen.webp" type="image/webp">
-            <img class="grayscale brightness-125" src="/assets/images/profiles/jorgen.png">
-          </picture>
-        </div>
-        <h4 class="mt-2 text-xl">Jörgen</h4>
+      <div class="flex justify-center mt-4">
+        <picture>
+          <source srcset="/assets/images/profiles/isak.webp" type="image/webp">
+          <img class="h-[150px] grayscale brightness-125 rounded-full" src="/assets/images/profiles/isak.png">
+        </picture>
       </div>
     </div>
   </div>
-
 </div>
-  <!--<img src="/assets/images/anders-och-lasse.jpeg" />-->
 
-  <!--<div class="flex flex-col items-center h-full">
-    <div class="rounded-md outline outline-2 p-2">top</div>
-    <div class="bg-black w-1 h-[25px]"></div>
-    <div class="rounded-md outline outline-2 p-2">mid</div>
-    <div class="bg-black w-1 h-[25px]"></div>
-    <div class="rounded-md outline outline-2 p-2">mid</div>
-    <div class="bg-black w-1 h-[25px]"></div>
-    <div class="rounded-md outline outline-2 p-2">end</div>
+<div class="min-h-[250px] flex flex-col items-start sm:flex-row bg-gagnef-orange-500">
+  <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
+    <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
+      <div class="text-lg sm:text-xl text-black">
+        <p>Ölnördarna Lasse, Anders och Jörgen gillade Isaks öl och en idé väcktes till liv - att starta ett lokalt bryggeri hemma i Gagnef.</p>
+        <p>2021 registrerades Gagnef Brewing AB.</p>
+      </div>
+      <div class="flex justify-center mt-4">
+        <picture>
+          <source srcset="/assets/images/profiles/lasse.webp" type="image/webp">
+          <img class="grayscale brightness-125 rounded-full" src="/assets/images/profiles/lasse.png">
+        </picture>
+        <picture>
+          <source srcset="/assets/images/profiles/jorgen.webp" type="image/webp">
+          <img class="grayscale brightness-125 rounded-full" src="/assets/images/profiles/jorgen.png">
+        </picture>
+        <picture>
+          <source srcset="/assets/images/profiles/anders.webp" type="image/webp">
+          <img class="grayscale brightness-125 rounded-full" src="/assets/images/profiles/anders.png">
+        </picture>
+      </div>
+    </div>
   </div>
-</div>-->
-
-<!--
-<div class="w-1/2 flex gap-8 snap-x scroll-pl-6 overflow-x-auto py-14 snap-mandatory">
-  <div class="snap-center shrink-0">
-    <div class="shrink-0 w-4 sm:w-48"></div>
-  </div>
-  <div class="snap-always snap-center shrink-0 first:pl-6 last:pr-6">
-    <img src="https://images.unsplash.com/photo-1604999565976-8913ad2ddb7c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=320&h=160&q=80" />
-  </div>
-  <div class="snap-always snap-center shrink-0 first:pl-6 last:pr-6">
-    <img src="https://images.unsplash.com/photo-1540206351-d6465b3ac5c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=320&h=160&q=80" />
-  </div>
-  <div class="snap-always snap-center shrink-0 first:pl-6 last:pr-6">
-    <img src="https://images.unsplash.com/photo-1622890806166-111d7f6c7c97?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=320&h=160&q=80" />
-  </div>
-  <div class="snap-always snap-center shrink-0 first:pl-6 last:pr-6">
-    <img src="https://images.unsplash.com/photo-1590523277543-a94d2e4eb00b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=320&h=160&q=80" />
-  </div>
-  <div class="snap-always snap-center shrink-0 first:pl-6 last:pr-6">
-    <img src="https://images.unsplash.com/photo-1575424909138-46b05e5919ec?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=320&h=160&q=80" />
-  </div>
-  <div class="snap-center shrink-0">
-    <div class="shrink-0 w-4 sm:w-48"></div>
+  <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-[url(/assets/images/flottbron.jpg)]">
+    <div class="h-[500px]"></div>
   </div>
 </div>
--->
+
+<div class="min-h-[250px] flex flex-col-reverse items-start sm:flex-row bg-gagnef-orange-500">
+  <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/vintarti.jpeg)]">
+    <div class="h-[500px]"></div>
+  </div>
+  <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
+    <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
+      <div class="text-lg sm:text-xl text-black">
+        <p>Vår första öl att nå butikshyllorna i Gagnef var folkölen Vintärti Mild Ale. Bryggd tillsammans med våra vänner på Wetterstadens Bryggeri.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="min-h-[250px] flex flex-col items-start sm:flex-row bg-gagnef-orange-500">
+  <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
+    <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
+      <div class="text-lg sm:text-xl text-black">
+        <p>Våren 2022 tog vi över lokalen från en matbutik där vi numera brygger vår öl.</p>
+      </div>
+    </div>
+  </div>
+  <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/isak_brygger.jpeg)]">
+    <div class="h-[500px]"></div>
+  </div>
+</div>
+
+<div class="min-h-[250px] flex flex-col-reverse items-start sm:flex-row bg-gagnef-orange-500">
+  <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/brewery_first_batch.jpeg)]">
+    <div class="h-[500px] flex items-center">
+    </div>
+  </div>
+  <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
+    <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
+      <div class="text-lg sm:text-xl text-black">
+        <p>På nationaldagen 2022 bryggde vi vår allra första riktiga öl. <a href="beers/vanlig" class="font-bold hover:underline underline-offset-8">VANLIG</a>.</p>
+      </div>
+    </div>
+  </div>
+</div>
