--- a/beers.html
+++ b/beers.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Produkter
-permalink: /products
+title: Våra öl
+permalink: /beers
 ---
 
 <div class="container p-4 space-y-16">
