--- a/cookies-privacy.html
+++ b/cookies-privacy.html
@@ -6,9 +6,8 @@ skip_age: true
 ---
 
 <div class="flex flex-col p-8">
-  <h1 class="text-2xl">Kakor</h1>
+  <h1 class="text-2xl uppercase">Kakor</h1>
 
   <p>Vi använder kakor för att undvika att visa rutan för ålderskontroll varje gång du besöker vår hemsida.</p>
   <p>Vi sparar enbart kakor efter det att du tillåter oss att spara kakor.</p>
-  <p>Därför kan du få se rutan om ålderskontroll fler gånger om du svarar på kontrollen före tillåtelse av kakor.</p>
 </div>
