--- a/index.html
+++ b/index.html
@@ -2,19 +2,18 @@
 layout: home
 ---
 
-<div class="bg-fixed w-full bg-center bg-cover min-h-screen flex flex-col bg-[url('/assets/images/flottbron.jpg')]">
-  <div class="flex flex-col min-h-screen bg-gradient-to-r from-gagnef-orange-500/60 to-gagnef-moss-500/50">
-    {% include molecules/under-contruction.html %}
+<div class="bg-fixed w-full bg-center bg-cover min-h-screen flex flex-col bg-[url('/assets/images/humlekottar.jpeg')]">
+  <div class="relative flex flex-col min-h-screen bg-gradient-to-r from-gagnef-moss-500/50 to-gagnef-moss-500/50 backdrop-blur-sm">
     <nav class="container p-4 mx-auto lg:flex sm:justify-between justify-center lg:items-center">
         <div class="sm:flex sm:items-center">
             <div class="flex items-center justify-center sm:justify-between">
                 <div>
                     <a class="" href="/">
-                      <img src="/assets/images/logo.png" alt="gagnef brewing logo" class="h-24 my-4 transition duration-200 transform invert hover:scale-[1.1]"/>
+                      <img src="/assets/images/logo.svg" alt="gagnef brewing logo" class="h-24 my-4 transition duration-200 transform invert hover:scale-[1.1]"/>
                     </a>
                 </div>
             </div>
-            <div class="flex flex-col text-white capitalize sm:px-16 sm:mx-4 sm:flex-row sm:items-center">
+            <div class="flex text-white space-x-5 items-center justify-center text-xl">
               {% for page_data in site.data.page_data %}
                 {% for pg in page_data %}
                   {%
@@ -29,60 +28,68 @@ layout: home
     </nav>
 
     <div class="flex grow flex-col justify-center mt-[-160px]">
-      <h1 class="text-5xl sm:text-8xl uppercase font-bold text-white text-center font-title drop-shadow-md">
-        Vi brygger i Gagnef
+      <h1 class="font-title text-5xl sm:text-8xl uppercase font-bold text-gagnef-yellow-500 text-center drop-shadow-[0_2px_2px_rgba(0,0,0,1)]">
+        Vi brygger i gagnef
       </h1>
     </div>
-    <div class="flex justify-center pb-10">
-      <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_klsab29v.json" background="transparent"  speed="1"  style="width: 24px; height: 39px;" loop autoplay></lottie-player>
+    <div class="flex justify-center pb-20 sm:pb-10">
+      <lottie-player src="/assets/lotties/scroll.json" background="transparent"  speed="1"  style="width: 24px; height: 39px;" loop autoplay></lottie-player>
     </div>
   </div>
 
-  <div class="transition-all min-h-[250px] flex flex-col-reverse items-start sm:flex-row bg-gagnef-blue-500">
-    <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px]">
-      <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[400px]">
-        <div class="text-4xl sm:text-6xl font-bold text-white">BRYGGERIET</div>
-        <div class="text-lg sm:text-xl text-white">
-          <p>Mitt i dalarna, bland älvar och flottbroar ligger Gagnef Brewing i en gammal matbutik</p>
-          <!--<a class="underline hover:bg-gagnef-orange-500" href="/brewery">Läs mer</a>-->
+  <div class="min-h-[250px] flex flex-col items-start sm:flex-row bg-gagnef-orange-500">
+    <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
+      <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
+        <div class="text-4xl sm:text-6xl font-bold text-black">BRYGGERIET</div>
+        <div class="text-lg sm:text-xl text-black">
+          <p>Gagnef Brewing är ett nanobryggeri i hjärtat av dalarna. Vi vill brygga hantverksöl med experimentslusta, skicklighet och varje ölstil ska vara en ny upplevelse. </p>
+          <div class="mt-2">
+            <a class="underline underline-offset-8 hover:text-white" href="/brewery">Läs mer</a>
+          </div>
         </div>
       </div>
     </div>
     <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-[url(/assets/images/brewery.jpg)]">
-      <div class="h-[500px]"></div>
+      <a href="/brewery" class="flex h-[500px] w-full"></a>
     </div>
   </div>
 
-  <!--<div class="flex flex-col items-start sm:flex-row bg-gagnef-pink-500">
-    <div class="flex p-4 w-full sm:w-1/2 justify-center self-center bg-[url(/assets/images/flowers.png)]">
-      <picture>
-        <source srcset="/assets/images/beers/vanlig.webp" type="image/webp">
-        <img class="h-[500px] " src="/assets/images/beers/vanlig.png">
-      </picture>
+  <div class="flex flex-col-reverse items-start sm:flex-row bg-gagnef-pink-500">
+    <div class="flex w-full sm:w-1/2 bg-[url(/assets/images/flowers.png)] bg-cover">
+      <a href="/beers/vanlig" class="flex justify-center self-center w-full h-full p-4 backdrop-blur-sm">
+        <picture>
+          <source srcset="/assets/images/beers/vanlig.webp" type="image/webp">
+          <img class="h-[500px]" src="/assets/images/beers/vanlig.png">
+        </picture>
+      </a>
     </div>
-    <div class="flex sm:w-1/2 sm:self-center sm:justify-center">
-      <div class="flex flex-col w-full sm:w-auto p-4">
-        <div class="text-4xl sm:text-6xl font-bold text-white">VANLIG</div>
-        <div class="text-lg sm:text-xl text-white">
-          <p>Vår första öl.</p>
-          <a class="underline hover:bg-gagnef-orange-500" href="/products/vanlig">Läs mer</a>
+    <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
+      <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
+        <div class="text-4xl sm:text-6xl font-bold text-black">VANLIG</div>
+        <div class="text-lg sm:text-xl text-black">
+          <p>Idén till Vanlig kläcktes när prästsonen Mike klagade på att vi inte bryggde något "ljust och blaskigt" i vårt hembryggeri. Resultatet blev en ljus ale inspirerad av ölen som bryggs i Köln.</p>
+          <div class="mt-2">
+            <a class="underline underline-offset-8 hover:text-white" href="/beers/vanlig">Läs mer</a>
+          </div>
         </div>
         </div>
     </div>
-  </div>-->
+  </div>
 
-  <div class="flex flex-col items-center sm:flex-row sm:justify-around p-10 bg-white space-y-5 sm:space-y-0">
-    <a href="//instagram.com/gagnefbrewing" target="_blank">
-      <button class="flex items-center p-2 hover:underline rounded-xl">
-        <img class="w-10 h-10 rounded-xl mr-2" src="/assets/images/socials/instagram.svg" alt="follow gagnef brewing on instagram" />
-        <p class="text-lg">Följ oss på Instagram</p>
-      </button>
-    </a>
-    <a href="//untappd.com/GagnefBrewing" target="_blank">
-      <button class="flex items-center p-2 hover:underline rounded-xl">
-        <img class="w-10 h-10 rounded-xl mr-2" src="/assets/images/socials/untappd.svg" alt="visit gagnef brewing on untappd" />
-        <p class="text-lg">Besök oss på Untappd</p>
-      </button>
-    </a>
+  <div class="min-h-[250px] flex flex-col items-start sm:flex-row bg-gagnef-orange-500">
+    <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
+      <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
+        <div class="text-4xl sm:text-6xl font-bold text-black">VÅRA ÖL</div>
+        <div class="text-lg sm:text-xl text-black">
+          <p>Utöver vår första öl har vi fler på gång</p>
+          <div class="mt-2">
+            <a class="underline underline-offset-8 hover:text-white" href="/beers">Upptäck fler</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-[url(/assets/images/burkar.jpeg)]">
+      <a href="/beers" class="flex h-[500px] w-full"></a>
+    </div>
   </div>
 </div>
