--- a/brewery.html
+++ b/brewery.html
@@ -86,7 +86,7 @@ permalink: /brewery/
   <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
     <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
       <div class="text-lg sm:text-xl text-black">
-        <p>På nationaldagen 2022 bryggde vi vår allra första riktiga öl. <a href="beers/vanlig" class="font-bold hover:underline underline-offset-8">VANLIG</a>.</p>
+        <p>På nationaldagen 2022 bryggde vi vår allra första riktiga öl. <a href="/beers/vanlig" class="font-bold hover:underline underline-offset-8">VANLIG</a>.</p>
       </div>
     </div>
   </div>
