--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ layout: home
         </div>
       </div>
     </div>
-    <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-[url(/assets/images/brewery.jpg)]">
+    <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/isak_brygger.jpeg)]">
       <a href="/brewery" class="flex h-[500px] w-full"></a>
     </div>
   </div>
